...
        return Column(
          children: [
            Row(
              children: [
                TextButton(
                    onPressed: () => setState(() => inEg = true),
                    child: Text("Gastos",
                        style: inEg ? textButton : textButtonOpaco)),
                TextButton(
                    onPressed: () => setState(() => inEg = false),
                    child: Text("Ingresos",
                        style: inEg ? textButtonOpaco : textButton)),
                const Spacer(),
                IconButton(
                  onPressed: () {
                    context.goNamed("calendario");
                  },
...
